--- a/estilos.css
+++ b/estilos.css
@@ -45,3 +45,32 @@ nav {
     border-radius: 16px;
     position: sticky;
 }
+/* Tablet */
+@media only screen and (max-width: 740px) {
+    nav {
+        position: fixed;
+        right: 10px;
+    }
+}
+/* Mobil */
+@media only screen and (max-width: 450px) {
+    nav {
+        position: fixed;
+        right: 10px;
+        height: 30px;
+    }
+
+    img {
+        width: 170px;
+        height: auto;
+    }
+
+    nav a{
+        padding: 0% 5px;
+        margin: 4% 6px;
+    }
+
+    header {
+        height: 80px;
+    }
+}
