--- a/estilos.css
+++ b/estilos.css
@@ -1,10 +1,12 @@
 img {
-    position: fixed;
+    position: absolute;
     left: 0px;
     margin-left: 15px;
 }
 
 header {
+    position: sticky;
+    top: 0;
     background-color: #ffe5b4;
     margin: 0px;
     border-bottom: ridge #ffe5b4 4px;
@@ -43,7 +45,6 @@ nav {
     background-color: #333;
     height: 50px;
     border-radius: 16px;
-    position: sticky;
 }
 /* Tablet */
 @media only screen and (max-width: 740px) {
