--- a/estilos.css
+++ b/estilos.css
@@ -4,6 +4,22 @@ img {
     margin-left: 15px;
 }
 
+body{
+    text-align: center;
+    font-family: Barlow Regular, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#titulo{
+    font-family: Madimi One, monospace, system-ui, Sans-serif;
+    font-size: 50px;
+    margin-top: 70px;
+    margin-bottom: 30px;
+}
+
+#subtitulo{
+    font-family: Barlow Regular, system-ui, -apple-system, Seoge UI, sans-serif;
+}
+
 header {
     position: sticky;
     top: 0;
@@ -74,4 +90,14 @@ nav {
     header {
         height: 80px;
     }
+}
+
+/*Fuentes*/
+@font-face {
+    font-family: Madimi One; /* El nombre que quieras darle a tu fuente */
+    src: url('Fonts/MadimiOne-Regular.ttf'); /* La ruta al archivo de la fuente */
+}
+@font-face {
+    font-family: Barlow regular;
+    src: url('Fonts/BarlowSemiCondensed-Regular.ttf');
 }
