--- a/estilos.css
+++ b/estilos.css
@@ -1,23 +1,7 @@
-img {
+header img {
     position: absolute;
     left: 0px;
     margin-left: 15px;
-}
-
-body{
-    text-align: center;
-    font-family: Barlow Regular, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-#titulo{
-    font-family: Madimi One, monospace, system-ui, Sans-serif;
-    font-size: 50px;
-    margin-top: 70px;
-    margin-bottom: 30px;
-}
-
-#subtitulo{
-    font-family: Barlow Regular, system-ui, -apple-system, Seoge UI, sans-serif;
 }
 
 header {
@@ -32,14 +16,96 @@ header {
     height: 100px;
 }
 
+nav {
+    display: flex;
+    text-align: center;
+    background-color: #333;
+    height: 50px;
+    border-radius: 16px;
+}
+
+nav a {
+    padding: 6% 10px;
+    margin: 4% 6px;
+    text-decoration: none;
+    color: white;
+    border-radius: 8px;
+    transition: 0.2s ease-in-out;
+}
+
+nav a:hover {
+    background-color: #ffdf99;
+    color: black;
+    transition: 0.2s ease-in-out;
+}
+
+nav a:active {
+    background-color: #ffcb77;
+}
+
+body{
+    text-align: center;
+    font-family: Barlow Regular, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0px;
+    background-color: #feeabb;
+}
+
+#titulo{
+    font-family: Madimi One, monospace, system-ui, Sans-serif;
+    font-size: 50px;
+    margin-top: 70px;
+    margin-bottom: 30px;
+}
+
+#subtitulo{
+    font-family: Barlow Regular, system-ui, -apple-system, Seoge UI, sans-serif;
+}
+
+#galeria {
+    padding: 80px;
+}
+
+#galeria img {
+    max-width: 1000px;
+    width: 80%;
+}
+
+#recetas {
+    padding: 30px;
+    display: inline-grid;
+}
+
+.receta {
+    margin: 30px 10px;
+    width: 260px;
+    background-color: #ffdf99;
+    border-radius: 20px;
+}
+
+.receta h1 {
+    margin: 20px 10px;
+}
+
+.receta p {
+    margin: 20px 20px;
+}
+
+.receta img {
+    width: 80%;
+    margin: 30px 10px;
+    border-radius: 15px;
+}
+
 footer {
     background-color: #ffdf99;
+    border-top: ridge #ffe5b4 4px;
 }
 
 footer h3 {
     font-size: 25px;
     font-family: Barlow Thin;
     padding-top: 15px;
+    margin-top: 0;
 }
 
 footer a {
@@ -55,36 +121,8 @@ footer p {
     padding-bottom: 10px;
 }
 
-body{
-    margin: 0px;
-    background-color: #feeabb;
-}
+/*No decorativas*/
 
-nav a {
-    padding: 6% 10px;
-    margin: 4% 6px;
-    text-decoration: none;
-    color: white;
-    border-radius: 8px;
-    transition: 0.2s ease-in-out;
-}
-nav a:hover {
-    background-color: #ffdf99;
-    color: black;
-    transition: 0.2s ease-in-out;
-}
-
-nav a:active {
-    background-color: #ffcb77;
-}
-
-nav {
-    display: flex;
-    text-align: center;
-    background-color: #333;
-    height: 50px;
-    border-radius: 16px;
-}
 /* Tablet */
 @media only screen and (max-width: 740px) {
     nav {
@@ -124,7 +162,6 @@ nav {
     font-family: Barlow regular;
     src: url('Fonts/BarlowSemiCondensed-Regular.ttf');
 }
-
 @font-face {
     font-family: Barlow Thin;
     src: url('Fonts/BarlowSemiCondensed-Thin.ttf');
