--- a/estilos.css
+++ b/estilos.css
@@ -14,6 +14,7 @@ header {
     align-items: center;
     justify-content: center;
     height: 100px;
+    z-index: 1;
 }
 
 nav {
@@ -41,6 +42,10 @@ nav a:hover {
 
 nav a:active {
     background-color: #ffcb77;
+}
+
+#titulorec {
+    font-size: 60px;
 }
 
 body{
@@ -85,6 +90,7 @@ body{
     width: 350px;
     background-color: #ffdf99;
     border-radius: 20px;
+    transition: ease-in-out 0.5s;
 }
 
 .receta h1 {
@@ -100,6 +106,12 @@ body{
     width: 80%;
     margin: 30px 10px;
     border-radius: 15px;
+}
+
+.receta:hover {
+    transform: scale(1.05);
+    transition: ease-in-out 0.3s;
+    filter: brightness(105%);
 }
 
 footer {
