--- a/estilos.css
+++ b/estilos.css
@@ -112,6 +112,7 @@ body{
     transform: scale(1.05);
     transition: ease-in-out 0.3s;
     filter: brightness(105%);
+    cursor: pointer;
 }
 
 footer {
